# jitome

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  syntax.abnf
include/jitome/: ast.hpp  error.hpp  eval.hpp  interpreter.hpp  jit.hpp  parser.hpp  result.hpp  token.hpp  tokenizer.hpp  traits.hpp  util.hpp
src/: Makefile  main.cpp
tests/: CMakeLists.txt  test_eval.cpp  test_interpreter.cpp  test_jit.cpp  test_parser.cpp  test_result.cpp  test_tokenizer.cpp
